# online-qml

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: changelog-release.yml  release.yml
scripts/: dim_sweep.py  dim_sweep_test.py  frame_distances.py  generate_data.py  make_layers.py  nout_sweep.py  ntrain_sweep.py  prior_validity_mse.py  script_ntrain_sweep.py  shot_sweep.py
scripts/primitive/: evaluate_layers.py  frame_distances.py
src/online_qml/: __init__.py  core.py  estimators.py  evaluation.py  experiments.py  frames.py  quantum.py
src/online_qml/core/: __init__.py  containers.py  internals.py  io.py  methods.py  monitoring.py  utilities.py
