[project]
name = "online-qml"
version = "0.7.0"
description = "Online quantum machine learning package, using PyTorch."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Alessandro Romancino" }]
keywords = ["quantum", "machine-learning", "shadow-tomography", "pytorch"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["pandas>=3.0", "torch>=2.11"]

[project.urls]
Repository = "https://github.com/alex180500/online-qml"
Issues = "https://github.com/alex180500/online-qml/issues"
Changelog = "https://github.com/alex180500/online-qml/releases"

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pyqt5>=5.15.11",
    "scienceplots>=2.2.1",
    "snakeviz>=2.2.2",
]
cpu = ["torch>=2.11"]

[tool.black]
target-version = ["py311"]

[project.optional-dependencies]
cu126 = ["torch>=2.11"]
cu128 = ["torch>=2.11"]
cu130 = ["torch>=2.11"]

[tool.uv]
default-groups = ["dev", "cpu"]
conflicts = [[{ group = "cpu" }, { extra = "cu126" }, { extra = "cu128" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
